# googleplay-api

./: pyproject.toml
gpapi/: config.py  device.properties  googleplay.py  googleplay_pb2.py  utils.py
test/: obb_download_test.py  test.py
