[tool.poetry]
name = "gpapi"
version = "0.4.4"
description = "Unofficial python api for google play"
authors = ["NoMore201 <domenico.iezzi.201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^5.27.2"
cryptography = "^42.0.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
mypy = "^1.11.0"
types-protobuf = "^5.27.0.20240626"
types-cryptography = "^3.3.23.2"
types-requests = "^2.32.0.20240712"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
sort-import = "ruff check --select I --fix"
file-format = "ruff format ."
format = ["sort-import", "file-format"]
protoc = "protoc --python_out=gpapi googleplay.proto"

[tool.mypy]
# mypy strict options
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.ruff]
exclude = ["googleplay_api/GooglePlay_pb2.py"]

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "BLE",
    "ARG",
    "B",
    "C4",
    "PT",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "RUF",
]
fixable = ["I"]
